fix: libftの関数を使えるように修正。ft_isspaceを新たにlibftに追加

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -20,7 +20,7 @@ RM = rm -f
 AR = ar rcs
 ECHO = echo -e
 
-SRC_LIBFT = ft_isalpha ft_isdigit ft_isalnum ft_isascii \
+SRC_LIBFT = ft_isalpha ft_isdigit ft_isalnum ft_isascii ft_isspace\
 			ft_isprint ft_strlen ft_memset ft_toupper ft_tolower\
 			ft_bzero ft_memcpy ft_memmove ft_strlcpy ft_strlcat \
 			ft_strchr ft_strrchr ft_strncmp ft_memchr ft_memcmp \
